e2e/fixtures/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: snippet-test-backend
spec:
  selector:
    app: snippet-test-backend
  ports:
  - port: 80
    targetPort: 80
